# speky

./: .gitignore  .mcp.json  AGENTS.md  DEVELOPMENT.md  LICENSE  MCP.md  README.md  diff.typ  pyproject.toml  schema.yaml  speky.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: check.yaml  pages.yaml
python/: __main__.py
python/speky/: __init__.py  __main__.py  code_tests.py  log_formatter.py  main.py  models.py  project.py  scanner.py  specification.py  utils.py
python/speky_mcp/: __init__.py  __main__.py  protocol.py  server.py  tools.py
skills/init/: SKILL.md  sample-Makefile  sample-conf.py  sample-manifest.yaml  sample-req.toml
skills/speky-workflow/: SKILL.md
skills/write-specs/: SKILL.md
skills/write-test-plans/: SKILL.md  test-plan-style.md
specs/: Makefile  as_table.csv  functional.yaml  nonfunctional.yaml  pdf.typ  simple.typ  speky.yaml
specs/comments/: 2025-05-21.yaml  2025-05-23.yaml  2025-05-26.yaml  2025-05-27.csv  2025-05-30.yaml  2025-09-07.yaml  2025-09-10.yaml  2026-04-05.toml
specs/mcp/: discovery.yaml  mcp.toml  mcp.typ  nonfunctional.yaml  query.yaml  test_01.yaml  test_02.yaml  test_03.yaml  test_04.yaml  test_05.yaml  test_06.yaml  test_07.yaml  test_08.yaml  test_09.yaml  test_10.yaml  test_11.yaml  test_12.yaml  tracability.yaml
specs/tests/: csv.yaml  functional.yaml
speky/: __init__.py  main.py
sphinx/: .gitignore  Makefile  conf.py  pyproject.toml  speky.py
sphinx/assets/: speky.css
sphinx/generators/: __init__.py  markdown.py
tests/: conftest.py  test.py  test_cli.py  test_fail.py  test_invalid_file.py  test_mcp_nominal.py  test_mcp_server.py  test_nominal.py  test_project_features.py
tests/failing_samples/: com_missing_3_fields.yaml  com_missing_about.yaml  com_missing_date.yaml  com_missing_from.yaml  com_missing_text.yaml  com_unknown_ref.yaml  missing_kind.yaml  req_missing_category.yaml  req_missing_id.yaml  req_missing_long.yaml  req_redefinition.yaml  req_unknown_ref.yaml  test_missing_ref.yaml  test_missing_ref_and_steps.yaml  test_missing_steps.yaml  test_step_missing_action.yaml  test_unknwon_ref.yaml
tests/samples/: comment_about.yaml  more_comments.yaml  more_requirements.toml  more_requirements.yaml  more_samples.yaml  more_source.go  more_source.py  more_spec.typ  more_tests.yaml  requirement_ref.yaml  simple_comments.yaml  (+4 more)
typst/: Makefile  common.typ  conversions.typ  requirement.typ  speky.typ  typst.toml.in
(+3 files in other folders)
