[project]
name = "speky"
dynamic = ["version"]
description = "Git track specifications with YAML"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
]
authors = [{name = "Antoine GAGNIERE"}]
license = 'MIT'
license-files = ['LICENSE']

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "yamale>=6.0.0",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project.scripts]
speky = "speky.__main__:main"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = [ 'python/speky' ]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
pattern = "(?P<base>\\d+[.]\\d+[.]\\d+)"

[tool.uv]
required-version = ">= 0.7.0"
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
